src/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Identification__c</fullName>
        <formula>HYPERLINK(&quot;https://fexleservicesprivatelimi-bb-dev-ed.lightning.force.com/lightning/o/Country__c/list?filterName=00B5i000008BfUSEA0&quot;, Country_Name__r.Name , &quot;_self&quot;) + &apos; -&gt; &apos; + HYPERLINK(&quot;https://fexleservicesprivatelimi-bb-dev-ed.lightning.force.com/lightning/o/State__c/list?filterName=00B5i000008BfUXEA0&quot;, Name , &quot;_self&quot;)</formula>
        <label>Identification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Districts__c</fullName>
        <label>Total Districts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State_Code__c</columns>
        <columns>Total_Number_Of_Districts__c</columns>
        <columns>Country_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>List_of_States_of_India</fullName>
        <columns>NAME</columns>
        <columns>Country_Name__c</columns>
        <columns>Total_Number_Of_Districts__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country_Name__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>States of India</label>
    </listViews>
    <listViews>
        <fullName>States_of_Japan</fullName>
        <columns>NAME</columns>
        <columns>Country_Name__c</columns>
        <columns>Total_Number_Of_Districts__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country_Name__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>States of Japan</label>
    </listViews>
    <listViews>
        <fullName>States_of_Sri_Lanka</fullName>
        <columns>NAME</columns>
        <columns>Country_Name__c</columns>
        <columns>Total_Number_Of_Districts__c</columns>
        <columns>State_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country_Name__c</field>
            <operation>equals</operation>
            <value>Sri Lanka</value>
        </filters>
        <label>States of Sri Lanka</label>
    </listViews>
    <listViews>
        <fullName>States_of_USA</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country_Name__c</field>
            <operation>equals</operation>
            <value>United States of America</value>
        </filters>
        <label>States of USA</label>
    </listViews>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>